fix: use ArrayDeque instead of ArrayList for faster